<resources>
    <string name="app_name">UFC</string>
    <string name="action_settings">Settings</string>

    <string name="ufcTitle">Welcome!</string>
    <string name="pfpTitle">Pound for Pound List</string>
    <string name="eventsTitle">UFC Events</string>
    <string name="ufc232Click">Click on the image to find out more about the event</string>
    <string name="ufc232">Click on the image to find out more about the event</string>

    <string name="ufc232Title">UFC 232</string>
    <string name="jonGus">jonGus</string>

    <string name="fightersMenu">Fighters</string>
    <string name="pfpMenu">Pound for Pound</string>
    <string name="eventsMenu">Events</string>
    <string name="homeMenu">Home</string>
    <string name="backButton">Back</string>

    <string name="register">Register</string>
    <string name="signIn">Sign In</string>
    <string name="home">Home</string>
    <string name="contact">Contact</string>

    <string name="splashScreen">Splash Screen</string>

    <string name="title_activity_login">Login</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="button">Submit</string>
    <string name="accountImage">account image</string>
    <string name="logOut">Log Out</string>
    <string name="welcomeUser">You are logged in!</string>
    <string name="showEmail">email</string>
    <string name="deleteAccount">Delete Account</string>
    <string name="logo">image</string>
    <string name="text1">title</string>
    <string name="text">Title</string>
    <string name="text2">Description</string>
    <string name="favMenu">Favourites</string>
    <string name="myAccount">My Account</string>
    <string name="addToFav">Add your favourite fighter!</string>
    <string name="addImage">addImage</string>
    <string name="ufcBelt">ufcBelt</string>
    <string name="ufcBeltClick">ufcBeltClick</string>
    <string name="minimum_pswd">Password Too Short</string>
    <string name="auth_failed">Authentication Failed - Please Register/Connect to Wifi</string>
</resources>
