<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PFP">

    <Button
        android:id="@+id/homeMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="homeMenuPressed"
        android:text="@string/homeMenu"
        app:layout_constraintBottom_toTopOf="@+id/pfpTitle"
        app:layout_constraintEnd_toStartOf="@+id/fightersMenu"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/fightersMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="fightersMenuPressed"
        android:text="@string/fightersMenu"
        app:layout_constraintBottom_toTopOf="@+id/pfpTitle"
        app:layout_constraintEnd_toStartOf="@+id/eventsMenu"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/homeMenu"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/eventsMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="eventsMenuPressed"
        android:text="@string/eventsMenu"
        app:layout_constraintBottom_toTopOf="@+id/pfpTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fightersMenu"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pfpTitle"
        android:layout_width="wrap_content"
        android:layout_height="54dp"
        android:text="@string/pfpTitle"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/listView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeMenu" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="0dp"
        android:layout_height="420dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pfpTitle" />

</android.support.constraint.ConstraintLayout>