<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Events">

    <Button
        android:id="@+id/homeMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="homeMenuPressed"
        android:text="@string/homeMenu"
        app:layout_constraintBottom_toTopOf="@+id/eventsTitle"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/fightersMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="fightersMenuPressed"
        android:text="@string/fightersMenu"
        app:layout_constraintEnd_toStartOf="@+id/pfpMenu"
        app:layout_constraintStart_toEndOf="@+id/homeMenu"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/pfpMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="pfpMenuPressed"
        android:text="@string/pfpMenu"
        app:layout_constraintBottom_toTopOf="@+id/eventsTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/eventsTitle"
        android:layout_width="190dp"
        android:layout_height="53dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/eventsTitle"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fightersMenu" />


    <ListView
        android:id="@+id/eventList"
        android:layout_width="match_parent"
        android:layout_height="388dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventsTitle"
        android:background="@android:color/black">
    </ListView>


</android.support.constraint.ConstraintLayout>